--- a/src/components/playlist/SearchBar.css
+++ b/src/components/playlist/SearchBar.css
@@ -1,4 +1,9 @@
 .SearchBar {
+  position: sticky;
+  top: 0;
+  background-color: var(--bg-aside);
+}
+.SearchBar-input {
   display: block;
   width: 100%;
   border: none;
